--- a/style.css
+++ b/style.css
@@ -60,7 +60,12 @@ img {
 }
 
 h1,
-h2,
+h2 {
+  font-weight: bold;
+  text-transform: none;
+  color: #fff;
+  font-size: 50px;
+}
 h3,
 h4,
 h5,
@@ -151,7 +156,7 @@ input:-webkit-autofill:focus {
     height: 36px;
     text-align: center;
     line-height: 2.5em;
-    background-color: #ffffff;
+    background-color: #000000;
     color: #138fc2;
     border-radius: 100px;
     -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
@@ -161,7 +166,7 @@ input:-webkit-autofill:focus {
 
 .social-menu li a:hover {
     background-color: #138fc2;
-    color: #ffffff;
+    color: #000000;
     -webkit-box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.1);
 }
@@ -171,20 +176,13 @@ input:-webkit-autofill:focus {
 **/
 
 .overlay:before,
+
 .sky-bg {
-    background: #75cbe7;
-    background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
-    background: linear-gradient(to bottom, #75cbe7 0%, #138fc2 100%);
-
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
-    color: #ffffff;
-
-    background-image: url("images/nightmoon.jpg");
-    background-color: #cccccc;
+    
 }
 
 .gray-bg {
-    background-color: #f2fefe;
+    background-color: #000000;
 }
 
 /**
@@ -272,10 +270,10 @@ height:20px;
     transform: translateY(0)
 }
 
-.box:hover {
+.box:hover { /* hover  buttons for dreamon*/
     -webkit-box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.1);
     box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: #000000;
     -webkit-transform: translateY(-5px);
     transform: translateY(-5px)
 }
@@ -370,7 +368,7 @@ height:20px;
 }
 
 .mainmenu-area.affix {
-    background-color: #138fc2;
+    background-color: #000000;
 }
 
 
@@ -381,7 +379,7 @@ height:20px;
 
 .client-area,
 .header-area {
-    background: #000000 url('images/parallax-2.jpg') no-repeat scroll center center / cover;
+    background: #000000 url('images/nightmoon.jpg') no-repeat scroll center center / cover; /*background main*/
 }
 
 .anlge-bg {
@@ -402,414 +400,30 @@ height:20px;
     opacity: 0.8
 }
 
-.header-text h2 {
-    margin-bottom: 20px;
-    font-size: 40px;
+.header-text h2 { /*SLEEPING, PERSONALIZED */
+    margin-bottom: 50px;
+    font-size: 30px;
 }
 
 .header-text .button {
-    margin-top: 30px;
-}
-
-.screen-slider .item {
-    background: url('images/mobile2.png') no-repeat scroll center center / auto 100%;
-    padding: 56px 22px;
-    display: inline-block;
-    margin: auto;
-}
-
-.screen-slider.owl-carousel .owl-item {
-    text-align: center
-}
-
-.screen-slider .owl-controls {
-    position: absolute;
-    left: 0;
-    top: 100%;
-}
-
-.screen-slider .owl-controls .owl-nav > div {
-    display: inline-block;
-    margin: 0 15px;
-    font-size: 20px;
-    text-align: center;
-    position: relative;
-}
-
-.screen-slider .owl-controls .owl-nav {
-    position: relative;
-    margin-top: 0;
-}
-
-.screen-slider .owl-controls .owl-nav:after {
-    content: "/";
-    position: absolute;
-    left: 50%;
-    top: 12px;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
-}
-
-/**
-*Caption-slider
-**/
-
-.caption-slider .carousel-indicators {
-    position: static;
-    margin: 30px auto 0 auto;
-    padding: 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-
-.caption-slider .carousel-indicators li {
-    float: left;
-    padding-top: 20px;
-    padding-right: 30px;
-    cursor: pointer;
-    position: relative;
-    list-style: none;
-}
-
-.caption-slider .carousel-indicators li:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: -2px;
-    width: 100%;
-    height: 3px;
-    background-color: #ffffff;
-    opacity: 0;
-}
-
-
-.caption-slider .carousel-indicators li.active:before {
-    opacity: 1;
-}
-
-.caption-slider .carousel-indicators li strong {
-    display: block;
-}
-
-.caption-slider h2 {
-    margin-bottom: 20px;
-    font-size: 40px;
-}
-
-.caption-slider .button {
-    margin-top: 30px;
-}
-
-.caption-slider .caption-photo {
-    display: inline-block;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.1)
-}
-
-.caption-slider .caption-photo.two {
-    margin-top: 60px;
-}
-
-.caption-slider .caption-title {
-    -webkit-animation-delay: 0.4s;
-    animation-delay: 0.4s
-}
-
-.caption-slider .caption-desc {
-    -webkit-animation-delay: 0.6s;
-    animation-delay: 0.6s
-}
-
-.caption-slider .caption-button {
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s
-}
-
-.caption-slider .caption-photo.one {
-    -webkit-animation-delay: 1s;
-    animation-delay: 1s
-}
-
-.caption-slider .caption-photo.two {
-    -webkit-animation-delay: 1.2s;
-    animation-delay: 1.2s
-}
-
-
-/***
-*Team-Section
-***/
-
-.single-team {
-    background-color: #ffffff;
-    border-radius: 5px;
-    overflow: hidden;
-    color: #515656;
-    text-align: center;
-    position: relative;
-    -webkit-box-shadow: 0 5px 30px -10px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 5px 30px -10px rgba(0, 0, 0, 0.3);
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-transition: 0.3s;
-    transition: 0.3s
-}
-
-.single-team:hover {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px)
-}
-
-.single-team .team-photo {
-    margin-bottom: 20px;
-    padding-top: 20px;
-    overflow: hidden;
-}
-
-.single-team .team-photo img {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-}
-
-.single-team:hover .team-photo img {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1)
-}
-
-.single-team h4 {
-    text-transform: uppercase;
-}
-
-.single-team h6 {
-    margin-bottom: 20px;
-}
-
-.single-team .social-menu {
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-    position: absolute;
-    bottom: -80px;
-    left: 0;
-    width: 100%;
-    padding: 23px 10px;
-    background-color: #ffffff;
-}
-
-.single-team:hover .social-menu {
-    bottom: 0;
+    margin-top: px;
 }
 
 /***
-*Testimonial-Page
-***/
-
-.testimonial-area {
-    background: url('images/parallax-7.jpg') no-repeat scroll center center / cover;
-    position: relative;
-    color: #ffffff;
-}
-
-.testimonial-area:before {
-    opacity: 0.9
-}
-
-.testimonial {
-    text-align: center;
-}
-
-.testimonial .testimonial-photo {
-    margin-bottom: 20px;
-    display: inline-block;
-    margin-right: 30px;
-    border-radius: 50%;
-    -webkit-box-shadow: 5px 10px 30px -10px rgba(255, 255, 255, 0.5);
-    box-shadow: 5px 10px 30px -10px rgba(255, 255, 255, 0.5);
-    position: relative;
-}
-
-.testimonial .testimonial-photo:after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 100%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-}
-
-.testimonials.owl-carousel .owl-controls .owl-nav {
-    text-align: center;
-}
-
-
-/***
-*Price-area
-***/
-
-.price-area {
-    background: url('images/parallax-6.jpg') no-repeat scroll center center / cover
-}
-
-.price-table h3 {
-    margin-bottom: 30px;
-}
-
-.price-table {
-    padding: 50px 40px;
-    border-radius: 2px;
-    text-align: center;
-    background-color: #ffffff;
-    color: #515656;
-    position: relative;
-    margin-top: 20px
-}
-
-.price-table.active {
-    padding: 70px 40px;
-    margin-top: 0
-}
-
-.price-table ul {
-    margin: 30px 0;
-    padding: 0;
-    list-style: none;
-}
-
-.price-table ul li {
-    padding: 5px 0;
-}
-
-.price-table .price-info {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    width: 100px;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    background-color: #55A2BE;
-    color: #ffffff;
-    border-radius: 0 0 50% 50%;
-    padding-bottom: 5px;
-}
-
-/**
-*Accordion
-**/
-
-#accordion .panel {
-    background: none;
-}
-
-#accordion .panel .panel-title {
-    padding: 30px 0 30px 60px;
-    position: relative;
-}
-
-#accordion .panel .panel-collapse {
-    padding-left: 60px;
-}
-
-#accordion .panel .panel-title a span:after,
-#accordion .panel .panel-title a span:before,
-#accordion .panel .panel-title a span {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 20px;
-    width: 36px;
-    height: 36px;
-    background: #2f60c3;
-    border-radius: 50%;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-}
-
-
-#accordion .panel .panel-title a span:before,
-#accordion .panel .panel-title a span:after {
-    width: 10px;
-    height: 1px;
-    background-color: #ffffff;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%);
-    transform: translate(-50%)
-}
-
-#accordion .panel .panel-title a span:before {
-    -webkit-transform: translate(-50%) rotate(90deg);
-    transform: translate(-50%) rotate(90deg)
-}
-
-#accordion .panel .panel-title a[aria-expanded="true"] span:before {
-    -webkit-transform: translate(-50%) rotate(0deg);
-    transform: translate(-50%) rotate(0deg)
-}
-
-/****
-*Blog-area
-*****/
-
-.single-blog {
-    overflow: hidden;
-    border-radius: 5px;
-    -webkit-box-shadow: 10px 15px 50px -10px rgba(0, 0, 0, 0.1);
-    box-shadow: 10px 15px 50px -10px rgba(0, 0, 0, 0.1);
-
-}
-
-.single-blog h3 {
-    font-size: 18px;
-}
-
-
-.single-blog .blog-meta {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-
-.single-blog .blog-meta li {
-    display: inline-block;
-    margin-right: 15px;
-}
-
-.single-blog .blog-meta li span {
-    margin-right: 5px;
-}
-
-.single-blog .blog-content {
-    padding: 40px 20px;
-    background-color: #ffffff
-}
-
-
-/***
-*Footer-area
+*FOOTER BOTTOM OF PAGE
 ***/
 
 .footer-area {
-    padding-top: 120px;
+    padding-top: 50px;
     z-index: 1;
 }
 
 .footer-bg {
-    background: url('images/angle-bg.png') no-repeat scroll center bottom / 100% auto;
-    z-index: -1;
+   background-image: url("images/mountains.jpg");
 }
 
 .footer-top {
-    margin-bottom: 150px;
+    margin-bottom: 0px;
 }
 
 .side-icon-box {
@@ -835,43 +449,17 @@ height:20px;
 }
 
 .footer-middle {
-    margin-bottom: 60px;
+    margin-bottom: 0px;
 }
 
 .footer-bottom {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     padding-top: 25px;
-    padding-bottom: 15px;
-}
-
-/***
-*Contact-form
-****/
-
-.contact-form .button {
-    letter-spacing: 2px;
-    min-width: 150px;
-    margin-top: 10px;
-    border-radius: 3px;
-}
-
-.form-control {
-    margin-bottom: 20px;
-    height: auto;
-    padding: 12px 20px;
-}
-
-.form-double input {
-    width: calc(50% - 10px);
-    float: left;
-}
-
-.form-double input:last-child {
-    float: right;
+    padding-bottom: 0px;
 }
 
 /*-----------
-preloader
+LOADING SCREEN
 ------------*/
 
 .preloader {
