--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ input:-webkit-autofill:focus {
     text-align: center;
     line-height: 2.5em;
     background-color: #000000;
-    color: #138fc2;
+    color: #ffffff;
     border-radius: 100px;
     -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
@@ -165,7 +165,7 @@ input:-webkit-autofill:focus {
 }
 
 .social-menu li a:hover {
-    background-color: #138fc2;
+    background-color: #ffffff;
     color: #000000;
     -webkit-box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.1);
@@ -189,12 +189,12 @@ input:-webkit-autofill:focus {
 *Default Button
 **/
 
-.button {
+.button { /* BEGIN BUTTON SIZE*/
     display: inline-block;
-    padding: 8px 30px;
+    padding: 6px 20px;
     border-radius: 50px;
     color: #ffffff;
-    background-color: #2f60c3;
+    background-color: #ffffff;
     -webkit-transition: 0.3s;
     transition: 0.3s;
     border: none;
@@ -203,20 +203,19 @@ input:-webkit-autofill:focus {
 }
 
 .button.white,
-.button:hover {
-    background-color: #2f60c3;
+
+.button:hover { /*COLOR OF THE BEGIN BUTTON*/
+    background-color: #204285;
     color: #ffffff;
-}
-
-
-
-height:20px; 
-    width:100px; 
+    height:100px; 
+    width:300px; 
     margin: -20px -50px; 
-    position:relative;
+    position:left;
     top:50%; 
     left:50%;
+    font-size: 50px;
 
+}
 .button.white:hover {
     background-color: #2f60c3;
     color: #ffffff;
@@ -331,7 +330,7 @@ height:20px;
     margin-bottom: 0;
 }
 
-.mainmenu-area #primary-menu > ul > li > a {
+.mainmenu-area #primary-menu > ul > li > a { /* DROPDOWN MENU STUFF */
     background: none;
     padding: 30px 15px;
     position: relative;
@@ -339,7 +338,7 @@ height:20px;
     text-align: center;
 }
 
-.mainmenu-area #primary-menu > ul > li > a:before {
+.mainmenu-area #primary-menu > ul > li > a:before { /* a:before refers to ARROW ON TOP OF TABS */
     content: "";
     position: absolute;
     left: 50%;
@@ -357,20 +356,19 @@ height:20px;
 }
 
 .mainmenu-area #primary-menu > ul > li > a:hover:before,
-.mainmenu-area #primary-menu > ul > li.active > a:before {
+.mainmenu-area #primary-menu > ul > li.active > a:before { /* THE ARROW THINGS ON TOP OF TABS*/
     opacity: 1;
     top: 0;
 }
 
 .mainmenu-area #primary-menu ul li.active a,
-.mainmenu-area #primary-menu ul li a:hover {
-    border-top: 3px solid #ffffff;
+.mainmenu-area #primary-menu ul li a:hover { /* THE LINE ABOVE THE ARROW THINGS ON TOP OF TAB*/
+
 }
 
 .mainmenu-area.affix {
-    background-color: #000000;
+    background-color: #000000; /*COLOR OF FIXED menu after you SCROLL DOWN*/
 }
-
 
 
 /**
@@ -383,7 +381,7 @@ height:20px;
 }
 
 .anlge-bg {
-    background: url('images/angle-bg.png') no-repeat scroll center bottom -120px / 100% auto;
+    background: url('images/angle-bg.png') no-repeat scroll center bottom -720px / 100% auto;
 }
 
 .overlay {
@@ -468,7 +466,7 @@ LOADING SCREEN
     left: 0;
     width: 100%;
     height: 100%;
-    background: #75cbe7;
+    background: #ffffff;
     background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
     background: linear-gradient(to bottom, #75cbe7 0%, #138fc2 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
@@ -488,10 +486,10 @@ LOADING SCREEN
     transform: rotateZ(45deg);
 }
 
-.sk-folding-cube .sk-cube {
+.sk-folding-cube .sk-cube { /*size of loading cube*/
     float: left;
-    width: 50%;
-    height: 50%;
+    width: 150%;
+    height: 150%;
     position: relative;
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
@@ -504,7 +502,7 @@ LOADING SCREEN
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #ffffff; /*COLOR OF SPINNING CUBE */
     -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
     animation: sk-foldCubeAngle 2.4s infinite linear both;
     -webkit-transform-origin: 100% 100%;
@@ -540,6 +538,7 @@ LOADING SCREEN
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
 }
+
 
 @-webkit-keyframes sk-foldCubeAngle {
     0%,
@@ -581,4 +580,8 @@ LOADING SCREEN
         transform: perspective(140px) rotateY(180deg);
         opacity: 0;
     }
+}
+
+.page-title h2 {
+    text-transform: none !important;
 }
