--- a/style.css
+++ b/style.css
@@ -198,13 +198,31 @@ input:-webkit-autofill:focus {
     margin-left: 5px;
 }
 
+.button.timer {
+    background-color: #000000;
+    color: #000000;
+    height:1px; 
+    width:1px; 
+    margin: 170px -5000px; 
+    position: center;
+    top:1%; 
+    left:1%;
+    font-size: 1px;
+    text-align: center;
+}
+}
+.button.timer:hover {
+    background-color: #000000;
+    color: #000000;
+}
+
 /**
 *Page title
 **/
 
 .page-title {
     margin-bottom: 60px;
-    margin-top: -100px;      /* SLEEP. MOVEMENT */
+    margin-top: 0px;      /* SLEEP. MOVEMENT */
 }
 
 .page-title h2 {
